k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: agilesnowball-website
  labels:
    app: agilesnowball
    tier: website
spec:
  ports:
  - port: 80
  selector:
    app: agilesnowball
    tier: website
